--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <title>MO - LUXURY</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body class="js-enabled">
 <!-- Top Header -->
 <header id="top-header">
   <div id="header-content">
