--- a/gallerys.html
+++ b/gallerys.html
@@ -80,6 +80,11 @@
       <img src="../M-Keshiro/image/modga7.jpg" alt="gallery 7">
       <img src="../M-Keshiro/image/modga8.jpg" alt="gallery 8">
       <img src="../M-Keshiro/image/modga9.jpg" alt="gallery 9">
+      <img src="../M-Keshiro/image/modga12.jpg" alt="gallery 12">
+      <img src="../M-Keshiro/image/modga13.jpg" alt="gallery 12">
+      <img src="../M-Keshiro/image/modga14.jpg" alt="gallery 13">
+      <img src="../M-Keshiro/image/modga15.jpg" alt="gallery 14">
+            
     </div>
   </main>
 
