--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- Luxury Video Section -->
 <section id="luxury" aria-label="Beyond Fashion elegance video">
   <video autoplay muted loop playsinline id="bgVideo">
-    <source src="image/mo-lion.mp4" type="video/mp4">
+    <source src="image/modga11.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <div class="overlay"></div>
