--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="header-content">
     <div class="brand">
       <a href="index.html" aria-label="MO-LUXURY Home">
-        <h1 id="mo">MO - LUXURY</h1>
+        <h1 id="mo">medinakeshiro</h1>
       </a>
     </div>
     <div id="header-right">
