--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <footer id="bottom">
   <nav aria-label="Footer Navigation" class="footer-section">
     <ul id="questions">
-      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="questions.html">FAQ</a></li>
       <li><a href="aboutUs.html">Our Story</a></li>
       <li><a href="#">Shipping & Refunds</a></li>
       <li><a href="contact.html" class="contact">Contact Us</a></li>
