--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="Medina Keshiro - Modern fashion gallery featuring a unique vision of modern design.">
 </head>
-<body class="js-enabled">
+<body class="js-enabled" >
 
   <!-- Top Header -->
   <header id="top-header">
@@ -21,11 +21,11 @@
         <nav id="top-bar" aria-label="Main Navigation">
           <ul id="main-menu" role="menubar">
             <li role="menuitem" class="has-sub">
-              <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false">Sort</a>
+              <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false"></a>
               <ul id="submenu" role="menu">
                 <li role="none"><a href="#ready-section" role="menuitem" class="sub-link" data-section="ready">Ready to Wear</a></li>
                 <li role="none"><a href="#customized-section" role="menuitem" class="sub-link" data-section="customized">Customize Wear</a></li>
-                <li role="none"><a href="#prom" role="menuitem" class="sub-link" data-section="collections">Prom Collections</a></li>
+                <li role="none"><a href="gallerys.html" role="menuitem" class="sub-link" data-section="collections">Collections</a></li>
               </ul>
             </li>
             <li role="none"><a href="#" role="menuitem" class="nav-link">Home</a></li>
@@ -61,9 +61,9 @@
   </div>
 
   <div id="wear-buttons">
-    <button class="section-btn" data-section="ready">Ready to Wear</button>
-    <button class="section-btn" data-section="collections">Our Collections</button>
-    <button class="section-btn" data-section="customized">Proms</button>
+    <a href="ready.html"><button class="section-btn" data-section="ready">Ready to Wear</button></a>
+    <a href="gallerys.html"><button class="section-btn" data-section="collections">Our Collections</button></a>
+    <a href="proms.html"><button class="section-btn" data-section="customized">Proms</button></a>
   </div>
 
   <!-- Luxury Video Section -->
