--- a/gallerys.html
+++ b/gallerys.html
@@ -179,7 +179,7 @@
   <script>
   document.querySelectorAll("video").forEach(v => v.playbackRate = 0.5);
 </script>
-  <script src="JS/script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
 
