--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <p>&copy; 2025 @ A.A | All Rights Reserved.</p>
   </footer>
 
-  <script src="../script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
 
