--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header-content">
       <div class="brand">
         <a href="index.html" aria-label="MO-LUXURY Home">
-          <h1 id="mo">medinakeshiro</h1>
+          <h1 id="mo">Medinakeshiro</h1>
         </a>
       </div>
       <div id="header-right">
@@ -24,7 +24,7 @@
               <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false"></a>
               <ul id="submenu" role="menu">
                 <li role="none"><a href="#ready-section" role="menuitem" class="sub-link" data-section="ready">Ready to Wear</a></li>
-                <li role="none"><a href="#customized-section" role="menuitem" class="sub-link" data-section="customized">Customize Wear</a></li>
+                <li role="none"><a href="#customized-section" role="menuitem" class="sub-link" data-section="customized">Custom Made</a></li>
                 <li role="none"><a href="gallerys.html" role="menuitem" class="sub-link" data-section="collections">Collections</a></li>
               </ul>
             </li>
@@ -62,8 +62,8 @@
 
   <div id="wear-buttons">
     <a href="ready.html"><button class="section-btn" data-section="ready">Ready to Wear</button></a>
-    <a href="gallerys.html"><button class="section-btn" data-section="collections">Our Collections</button></a>
-    <a href="proms.html"><button class="section-btn" data-section="customized">Proms</button></a>
+    <a href="gallerys.html"><button class="section-btn" data-section="collections">Collections</button></a>
+    <a href="prom.html"><button class="section-btn" data-section="customized">Prom</button></a>
   </div>
 
   <!-- Luxury Video Section -->
@@ -98,9 +98,13 @@
       <img src="image/modga9.jpg" alt="Featured Fashion Design">
     </figure>
     <article id="collection-pictures">
-      <p>This modern fashion gallery is not just a collection; it's a statement. Our gallery curates a unique vision of modern design, featuring pieces that blend art and clothing. This collection is an immersive experience, inviting you to witness fashion not as a trend, but as wearable art.</p>
+      <p>This modern fashion gallery is not just a collection; 
+        it's a statement. Our gallery curates a unique vision of modern design, 
+        featuring pieces that blend art and clothing. 
+        This collection is an immersive experience,
+        inviting you to witness fashion not as a trend, but as wearable art.</p>
       <div id="collection-view">
-        <h4><a href="gallerys.html" class="gallerys-link">Take a look</a></h4>
+        <h4><a href="gallerys.html" class="gallerys-link">Tour Gallery</a></h4>
       </div>
     </article>
   </section>
