--- a/aboutUs.html
+++ b/aboutUs.html
@@ -63,7 +63,7 @@
     text-align:justify;
   }
 
-  .aboutUs span { color:#c0392b; font-weight:bold; }
+  .aboutUs span { color:#FFD700; font-weight:bold; }
 
   @media(max-width:768px){
     .aboutUs { padding:25px 30px; font-size:1rem; }
@@ -79,10 +79,10 @@
   <div class="logo-bg" id="logo-bg"></div>
 
   <p class="aboutUs">
-    We make beautiful dresses for strong women. At <span>Medinat Keshiro</span> we believe every woman deserves the best in what they wear, 
+    We make beautiful dresses for strong women. At <span><a>MedinatKeshiro</a></span> we believe every woman deserves the best in what they wear, 
     and every woman is a queen, who deserves affordable high-quality clothes. We specialize in excellent and creative designs with perfect completion to your needs. We craft outfits 
     tailored to each individual, blending American styles with rich African styles. Whether you need a
-    glamorous party dress, a reception dress for wedding, a prom dress, a simple embellished suit, a casual outfit, or bespoke attire, here at <span>Medinat Keshiro</span>, we will make you feel 
+    glamorous party dress, a reception dress for wedding, a prom dress, a simple embellished suit, a casual outfit, or bespoke attire, here at <span><a>MedinatKeshiro</a></span>, we will make you feel 
     confident, stunning and be your authentic self.
   </p>
 
