--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li role="menuitem" class="has-sub">
               <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false"></a>
               <ul id="submenu" role="menu">
-                <li role="none"><a href="#ready-section" role="menuitem" class="sub-link" data-section="ready">Ready to Wear</a></li>
-                <li role="none"><a href="#customized-section" role="menuitem" class="sub-link" data-section="customized">Custom Made</a></li>
+                <li role="none"><a href="ready.html" role="menuitem" class="sub-link" data-section="ready">Ready to Wear</a></li>
+                <li role="none"><a href="customized.html" role="menuitem" class="sub-link" data-section="customized">Custom Made</a></li>
                 <li role="none"><a href="gallerys.html" role="menuitem" class="sub-link" data-section="collections">Collections</a></li>
               </ul>
             </li>
